[package]
name = "clockwise-testbed"
version = "0.1.0"
authors = ["Marshall Clyburn"]
edition = "2018"

[dependencies]
clockwise_common = { path = "../common" }

getopts = "^0.2"
json = "^0.12"
libloading = "^0.7"
rppal = "^0.11"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
